--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^3.6.0",
     "fs-extra": "^11.2.0",
     "marked": "^14.0.0",
-    "marked-footnote": "^1.2.4"
+    "marked-footnote": "^1.2.4",
+    "rss": "^1.2.2"
   }
 }
